# VehicleReminder

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  LICENSE  README.md
src/: CMakeLists.txt  addprofiledialog.cpp  addprofiledialog.h  constants.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.rc  profilemanagerwidget.cpp  profilemanagerwidget.h  profileproxymodel.cpp  profileproxymodel.h  profileview.cpp  profileview.h  vehicleinfomanagerwidget.cpp  vehicleinfomanagerwidget.h
src/db/: CMakeLists.txt  vrdatabase.cpp  vrdatabase.h
src/structures/: CMakeLists.txt  profile.cpp  profile.h  vehicle.cpp  vehicle.h
src/uis/: addprofilewidget.ui  mainwidget.ui  profilemanagerwidget.ui
