# Riccardo Bellini <riccardo.bellini1988@gmail.com>
# Vehicle Reminder

PROJECT("Vehicle Reminder")


FIND_PACKAGE(Qt4 COMPONENTS QtCore QtGui QtSql REQUIRED)
FIND_PACKAGE(KDE4 REQUIRED)

INCLUDE_DIRECTORIES(${KDE4_INCLUDES})

ADD_DEFINITIONS(${KDE4_DEFINITIONS})
ADD_DEFINITIONS(${QT_DEFINITIONS})


INCLUDE(KDE4Defaults)


ADD_SUBDIRECTORY(src)

